# amaebi

./: AGENTS.md  CLAUDE.md  CONFIG_REFERENCE.md  Cargo.toml  DEPLOYMENT.md  DEV_WORKFLOW.md  LICENSE  OPERATIONS_INDEX.md  PLAN.md  README.md  RUNBOOK.md  RUST_AGENT_RULES.md  amaebi  build.rs
.claude/: settings.json
.claude/hooks/: pre-commit.sh
.github/workflows/: ci.yml
docker/dev/: Dockerfile
docker/sandbox-test/: Dockerfile
docs/: architecture.md  bedrock-upstream-check.md  chat.md  claude.md  dashboard.md  resource-pool.md  supervision.md
docs/design/: claude-chat-takeover.md
scripts/: build-dev-image.sh  build-sandbox-image.sh  dev.sh  next-version.sh  test.sh
src/: agent_server.rs  auth.rs  auth_flow.rs  banner.rs  bedrock.rs  cli.rs  client.rs  config.rs  copilot.rs  cron.rs  cron_ddl.sql  daemon.rs  dashboard.rs  followup.rs  inbox.rs  ipc.rs  main.rs  memory.rs  memory_db.rs  models.rs  pane_lease.rs  provider.rs  resource_lease.rs  responses.rs  retry.rs  session.rs  task_tagger.rs  tasks.rs  test_utils.rs  tools.rs
src/sandbox/: docker.rs  landlock_seccomp.rs  mod.rs  namespace.rs  noop.rs
src/workflows/: builtins.rs  executor.rs  mod.rs
tests/: integration_tests.rs
tests/support/: helpers.rs  mock_llm.rs  mod.rs
