[package]
name = "tmux-copilot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmux-copilot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
