[package]
name = "amaebi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amaebi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
agent-client-protocol = "0.10.2"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3"
